--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.2",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
-    "prisma": "^6.15.0"
+    "express-handlebars": "^8.0.1",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.16.2"
   }
 }
