--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,14 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "prisma": "^6.16.2"
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^13.0.0",
+    "jest": "^29.7.0",
+    "prisma": "^6.16.2",
+    "supertest": "^6.3.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node src/app.js"
   }
 }
