--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,17 @@
 {
   "dependencies": {
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.0.0",
     "jest": "^29.7.0",
-    "prisma": "^6.16.2",
+    "prisma": "^6.18.0",
     "supertest": "^6.3.0"
   },
   "scripts": {
